--- a/templates/layouts/administrador.html
+++ b/templates/layouts/administrador.html
@@ -34,7 +34,7 @@
         <div class="container px-5">
             <h3>
                 <a class="navbar-brand" href="/"><img src="/static/img/logo_pato.png" width="80px"
-                        height="50px">Insititucion Patitos Felices</a>
+                        height="50px">  Insititucion Patitos Felices</a>
             </h3>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -75,69 +75,75 @@
                         id="menu">
                         <li>
                             <a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
-                                <i class="fs-4 bi-speedometer2"></i> <span class="btn btn-info">Agregar</span> </a>
+                                <i class="fs-4 bi-speedometer2"></i> <span class="button">Agregar</span> </a>
+                            <br>
                             <ul class="collapse  nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
                                 <li class="w-100">
-                                    <button class="badge bg-primary text-wrap" style="width: 6rem;"
+                                    <button class="button button2" style="width: 6rem;"
                                         data-bs-toggle="collapse" href="#AgregarDocente" role="button"
-                                        aria-expanded="false" aria-controls="AgregarDocente">Registro
-                                        Docentes</button>
+                                        aria-expanded="false" aria-controls="AgregarDocente">Registro Docentes</button>
                                 </li>
 
                                 <br>
                                 <li>
-                                    <button class="badge bg-primary text-wrap" style="width: 6rem;" type="button"
+                                    <button class="button button2" style="width: 6rem;" type="button"
                                         data-bs-toggle="collapse" data-bs-target="#AgregarAlumno" aria-expanded="false"
                                         aria-controls="AgregarAlumno">Registro Alumnos</button>
                                 </li>
                                 <br>
                                 <li>
-                                    <button class="badge bg-primary text-wrap" style="width: 6rem;"
+                                    <button class="button button2
+                                    
+                                    " style="width: 6rem;"
                                         data-bs-toggle="collapse" href="#Cursos" role="button" aria-expanded="false"
                                         aria-controls="Curso">Crear Curso</button>
                                 </li>
+                                <br>
                             </ul>
                         </li>
                         <li>
                             <a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle ">
-                                <i class="fs-4 bi-bootstrap"></i> <span class="btn btn-danger">Eliminar</span></a>
+                                <i class="fs-4 bi-grid"></i> <span class="button">Eliminar</span></a>
+                            <br>
                             <ul class="collapse  nav flex-column ms-1" id="submenu2" data-bs-parent="#menu">
                                 <li class="w-100">
-                                    <button class="badge bg-primary text-wrap" style="width: 6rem;"
+                                    <button class="button button2" style="width: 6rem;"
                                         data-bs-toggle="collapse" href="#ElimnarDocente" role="button"
                                         aria-expanded="false" aria-controls="ElimnarDocente">Elimnar
                                         Docentes</button>
-
                                 </li>
                                 <br>
                                 <li>
-                                    <button class="badge bg-primary text-wrap" style="width: 6rem;" type="button"
+                                    <button class="button button2" style="width: 6rem;" type="button"
                                         data-bs-toggle="collapse" data-bs-target="#ElimnarAlumno" aria-expanded="false"
                                         aria-controls="ElimnarAlumno">Elimnar Alumnos</button>
                                 </li>
+                                <br>
                             </ul>
                         </li>
                         <li>
                             <a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
-                                <i class="fs-4 bi-grid"></i> <span class="btn btn-success">Mostrar</span> </a>
+                                <i class="fs-4 bi-grid"></i> <span class="button">Mostrar</span> </a>
+                            <br>
                             <ul class="collapse nav flex-column ms-1" id="submenu3" data-bs-parent="#menu">
                                 <li class="w-100">
-                                    <button class="badge bg-primary text-wrap" style="width: 6rem;"
+                                    <button class="button button2" style="width: 6rem;"
                                         data-bs-toggle="collapse" href="#Docentes" role="button" aria-expanded="false"
                                         aria-controls="Docentes"> Docentes</button>
                                 </li>
                                 <br>
                                 <li>
-                                    <button class="badge bg-primary text-wrap" style="width: 6rem;"
+                                    <button class="button button2" style="width: 6rem;"
                                         data-bs-toggle="collapse" href="#Estudiantes" role="button"
                                         aria-expanded="false" aria-controls="Docentes"> Estudiantes</button>
                                 </li>
                                 <br>
                                 <li>
-                                    <button class="badge bg-primary text-wrap" style="width: 6rem;"
+                                    <button class="button button2" style="width: 6rem;"
                                         data-bs-toggle="collapse" href="#CursosCreados" role="button"
                                         aria-expanded="false" aria-controls="Docentes"> Cursos</button>
                                 </li>
+                                <br>
                             </ul>
                         </li>
                         <li>
@@ -193,7 +199,7 @@
                                 </center>
                                 <br>
                                 <!-- Submit button -->
-                                <center><button type="submit" class="btn btn-primary btn-block mb-3"
+                                <center><button type="submit" class="button"
                                         style="background-color: #8064A2">Registrar</button></center>
                             </form>
                         </div>
@@ -258,7 +264,7 @@
                                 <input type="email" id="registerName" class="form-control" placeholder="Correo"
                                     id="email" name="email" />
                             </div>
-                            <center><button type="submit" class="btn btn-primary btn-block mb-3"
+                            <center><button type="submit" class="button"
                                     style="background-color: #8064A2">Elimnar</button></center>
                         </form>
                     </div>
@@ -275,7 +281,7 @@
                                 <input type="text" id="registerName" class="form-control" placeholder="Nombre"
                                     name="nombre" />
                             </div>
-                            <center><button type="submit" class="btn btn-primary btn-block mb-3"
+                            <center><button type="submit" class="button"
                                     style="background-color: #8064A2">Elimnar</button></center>
                         </form>
                     </div>
@@ -289,17 +295,18 @@
                                     <center>
                                         <h3>Crear Aula</h3>
                                     </center>
+                                    
                                     <div class="form-outline mb-4">
-                                        <input type="text" id="registerName" class="form-control" placeholder="Nombre"
+                                        <input type="text" id="registerName" class="form-control" placeholder="Idenficacion"
                                             name="nombre" id="nombre" />
                                     </div>
                                     <br>
                                     <!-- Submit button -->
-                                    <center><button type="submit" class="btn btn-primary btn-block mb-3"
+                                    <center><button type="submit" class="button"
                                             style="background-color: #8064A2">Registrar</button></center>
                                 </form>
 
-
+                                <br><br>
                                 <form action="/CrearCurso" method="post">
                                     <center>
                                         <h3>Crear Curso</h3>
@@ -309,19 +316,34 @@
                                             name="nombre" id="nombre" />
                                     </div>
                                     <div>
+                                        <input list="Aula" type="text" placeholder="Aula" class="form-control"
+                                            name="nombreAula" />
+                                        <div class="form-outline mb-4">
+                                            <datalist id="Aula" name="Aula_">
+                                                {% for i in Aulas %}
+                                                <select name="Aula">
+                                                    <option value="{{i.Aula}}">{{ i.Aula }}</option>
+                                                </select>
+                                                {% endfor %}
+                                            </datalist>
+                                        </div>
+                                    </div>
+                                    <div>
                                         <input list="Docente" type="text" placeholder="Docente" class="form-control"
                                             name="NombreDocente" />
-                                        <datalist id="Docente" name="Docente_">
-                                            {% for i in Docentes %}
-                                            <select name="Docente">
-                                                <option value="{{i.Nombre}}">{{ i.Nombre }}</option>
-                                            </select>
-                                            {% endfor %}
-                                        </datalist>
+                                        <div class="form-outline mb-4">
+                                            <datalist id="Docente" name="Docente_">
+                                                {% for i in Docentes %}
+                                                <select name="Docente">
+                                                    <option value="{{i.Nombre}}">{{ i.Nombre }}</option>
+                                                </select>
+                                                {% endfor %}
+                                            </datalist>
+                                        </div>
                                     </div>
                                     <br>
                                     <!-- Submit button -->
-                                    <center><button type="submit" class="btn btn-primary btn-block mb-3"
+                                    <center><button type="submit" class="button"
                                             style="background-color: #8064A2">Registrar</button></center>
                                 </form>
                             </div>
@@ -367,7 +389,7 @@
                         </div>
                     </div>
                 </div>
-
+                <br>
 
                 <div class="col">
                     <div class="collapse multi-collapse" id="Estudiantes">
@@ -406,7 +428,7 @@
                         </div>
                     </div>
                 </div>
-
+                <br>
 
                 <div class="col">
                     <div class="collapse multi-collapse" id="CursosCreados">
@@ -442,7 +464,36 @@
             </div>
         </div>
     </div>
-
+    <style>
+        .button {
+          display: inline-block;
+          padding: 10px 30px;
+          font-size: 18px;
+          cursor: pointer;
+          text-align: left;	
+          text-decoration: none;
+          outline: none;
+          color: #fff;
+          background-color: #b65eff;
+          border: none;
+          border-radius: 8px;
+          box-shadow: 0 9px #999;
+        }
+        
+        .button2 {background-color: #008CBA;} /* Blue */
+        .button3 {background-color: #70ffb1;} /* Red */ 
+        .button4 {background-color: #ff4444;} /* Gray */ 
+        .button5 {background-color: #99ff39;} /* Black */
+        .button6 {background-color: #77ffcb;} /* Black */
+        
+        .button:hover {background-color: #757575}
+        
+        .button:active {
+          background-color: #a1fca4;
+          box-shadow: 0 5px #666;
+          transform: translateY(4px);
+        }
+        </style>
 
 </body>
 
